# rivetnotes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md  build.md  build.rs  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md
installer/: rivet.iss
scripts/: build-installer.ps1  install.ps1  package.ps1  uninstall.ps1
src/: error.rs  logging.rs  main.rs
src/app/: document.rs  mod.rs  session.rs  settings.rs
src/commands/: copy_full_path.rs  mod.rs  selection.rs
src/editor/: mod.rs  scintilla.rs
src/platform/: clipboard.rs  mod.rs  win32.rs
src/storage/: atomic_write.rs
src/textops/: trim.rs
