[package]
name = "rivet"
version = "0.4.2"
edition = "2024"
license = "MIT"

[dependencies]
windows = { version = "0.54.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[build-dependencies]
cc = "1.0"
winres = "0.1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
